# IkaPayFi

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  airdrop.sh  build.sh  commit.sh  deploy.sh  gen_keypair.sh  package-lock.json  package.json  vercel.json
api/: index.mjs
data/: README.md
docs/: ARCHITECTURE.md  CURRENT_STATUS.md  DEMO_SCRIPT.md  DEVNET_RUNBOOK.md  PREALPHA_NOTES.md  SUBMISSION_DRAFT.md  WHAT_TO_PROVIDE.md
programs/ikapayfi_policy_engine/: Cargo.toml
programs/ikapayfi_policy_engine/data/: ikapayfi-db.json
programs/ikapayfi_policy_engine/src/: encrypt_stub.rs  encrypted_policy.rs  lib.rs
scripts/: demo-flow.mjs  reset-data.mjs  serve.mjs
src/engine/: demo-data.js  policy-engine.js
src/server/: api.mjs  integration-mode.mjs  solana-devnet.mjs  store.mjs
test/: api.test.js  policy-engine.test.js  solana-devnet.test.js
web/: app.js  index.html  landing.css  styles.css  wallet.js
