[package]
name = "ikapayfi_policy_engine"
version = "0.1.0"
description = "IkaPayFi Solana policy engine for encrypted bridgeless payroll and remittance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ikapayfi_policy_engine"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# Encrypt FHE — https://docs.encrypt.xyz
# Program ID (devnet): 4ebfzWdKnrnGseuQpezXdG8yCdHqwQ1SSBHD3bWArND8
# gRPC executor:       https://pre-alpha-dev-1.encrypt.ika-network.net:443
anchor-lang    = "0.32"
encrypt-types  = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
encrypt-dsl    = { package = "encrypt-solana-dsl", git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
encrypt-anchor = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }

# Ika dWallet — https://solana-pre-alpha.ika.xyz
# Program ID (devnet): 87W54kGYFQ1rgWqMeu4XTPHWXWmXSQCcjm8vCTfiq1oY
# gRPC endpoint:       https://pre-alpha-dev-1.ika.ika-network.net:443
# CPI authority seed:  b"__ika_cpi_authority"
# NOTE: ika-dwallet-anchor requires anchor-lang = "1", which conflicts with Encrypt's "0.32"
# Until sponsors clarify the version compatibility, we reference ika-sdk-types only and
# implement the approve_message CPI stub manually (see src/lib.rs IkaCpi section).
ika-sdk-types  = { package = "ika-solana-sdk-types", git = "https://github.com/dwallet-labs/ika-pre-alpha", optional = true }

[dev-dependencies]
encrypt-solana-test = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
