[package]
name = "ikapayfi_policy_engine"
version = "0.1.0"
description = "IkaPayFi Solana policy engine for encrypted bridgeless payroll and remittance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ikapayfi_policy_engine"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
# Anchor 0.30.1 — matches the installed avm version
anchor-lang = { version = "0.30", features = ["init-if-needed"] }

# NOTE on Encrypt & Ika pre-alpha integration:
# The production integration uses:
#   encrypt-anchor = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
#   ika-dwallet-anchor = { git = "https://github.com/dwallet-labs/ika-pre-alpha" }
#
# These repos are private/access-gated pre-alpha SDKs.
# The EncryptContext CPI and DWalletContext.approve_message() patterns are fully
# documented inline in src/lib.rs and docs/DEVNET_RUNBOOK.md.
# The program is structured so these can be wired in by swapping the stub imports.
#
# Encrypt devnet program ID:  4ebfzWdKnrnGseuQpezXdG8yCdHqwQ1SSBHD3bWArND8
# Encrypt gRPC:               https://pre-alpha-dev-1.encrypt.ika-network.net:443
# Ika devnet program ID:      87W54kGYFQ1rgWqMeu4XTPHWXWmXSQCcjm8vCTfiq1oY
# Ika gRPC:                   https://pre-alpha-dev-1.ika.ika-network.net:443
# Ika CPI authority seed:     b"__ika_cpi_authority"
