[package]
name = "ikapayfi_policy_engine"
version = "0.1.0"
description = "IkaPayFi Solana policy engine for encrypted bridgeless payroll and remittance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ikapayfi_policy_engine"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
# Anchor 0.32 — required by encrypt-anchor (Encrypt pre-alpha)
anchor-lang = { version = "0.32", features = ["init-if-needed"] }

# ── Encrypt FHE pre-alpha (https://docs.encrypt.xyz) ──────────────────────────
# Provides: #[encrypt_fn] DSL, EncryptContext CPI struct, execute_graph, request_decryption
# Program ID (devnet): 4ebfzWdKnrnGseuQpezXdG8yCdHqwQ1SSBHD3bWArND8
# gRPC executor: https://pre-alpha-dev-1.encrypt.ika-network.net:443
encrypt-types = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha", optional = true }
encrypt-dsl   = { package = "encrypt-solana-dsl", git = "https://github.com/dwallet-labs/encrypt-pre-alpha", optional = true }
encrypt-anchor = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha", optional = true }

# ── Ika dWallet pre-alpha (https://solana-pre-alpha.ika.xyz) ──────────────────
# Provides: DWalletContext, CPI_AUTHORITY_SEED, approve_message, transfer_dwallet
# NOTE: ika-dwallet-anchor requires anchor-lang = "1" (Anchor v1.0.0) which conflicts
# with encrypt-anchor requiring anchor-lang = "0.32".
# Resolution: wire ika CPI via raw invoke_signed until SDK versions align, or use
# ika-dwallet-pinocchio in a separate co-program. See DEVNET_RUNBOOK.md.
# Program ID (devnet): 87W54kGYFQ1rgWqMeu4XTPHWXWmXSQCcjm8vCTfiq1oY
# gRPC: https://pre-alpha-dev-1.ika.ika-network.net:443
# ika-dwallet-anchor = { git = "https://github.com/dwallet-labs/ika-pre-alpha", optional = true }

[dev-dependencies]
encrypt-solana-test = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha", optional = true }
